crates/introspect/tests/snapshots/postgres__indexes_and_constraints.snap
---
source: crates/introspect/tests/postgres.rs
expression: snapshot
---
id: search
display_name: ~
backend: postgres
namespaces:
  - name: public
    comment: standard public schema
  - name: search
    comment: ~
enums: []
tables:
  - namespace: search
    name: documents
    comment: ~
    columns:
      - name: id
        data_type: bigint
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: postgres
          enum_values: []
          identity: ~
          generated: ~
      - name: tenant_id
        data_type: bigint
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: postgres
          enum_values: []
          identity: ~
          generated: ~
      - name: title
        data_type: text
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: postgres
          enum_values: []
          identity: ~
          generated: ~
      - name: body
        data_type: text
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: postgres
          enum_values: []
          identity: ~
          generated: ~
      - name: published
        data_type: boolean
        nullable: false
        default: "false"
        comment: ~
        backend:
          backend: postgres
          enum_values: []
          identity: ~
          generated: ~
    constraints:
      - name: documents_title_check
        kind: check
        columns:
          - title
        expression: "title <> ''::text"
        references: ~
        backend:
          backend: postgres
          definition: "CHECK (title <> ''::text) NOT VALID"
          deferrable: false
          initially_deferred: false
          validated: false
          locally_defined: true
          no_inherit: false
      - name: documents_title_unique
        kind: unique
        columns:
          - tenant_id
          - title
        expression: ~
        references: ~
        backend:
          backend: postgres
          definition: "UNIQUE NULLS NOT DISTINCT (tenant_id, title) DEFERRABLE INITIALLY DEFERRED"
          deferrable: true
          initially_deferred: true
          validated: true
          locally_defined: true
          no_inherit: true
    indexes:
      - name: documents_cluster_idx
        unique: false
        terms:
          - target:
              column: id
            collation: ~
            operator_class: pg_catalog.int8_ops
            order: ascending
            nulls_order: last
        predicate: ~
        definition: CREATE INDEX documents_cluster_idx ON search.documents USING btree (id)
        backend:
          backend: postgres
          method: btree
          predicate: ~
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: true
          replica_identity: false
      - name: documents_lookup_idx
        unique: true
        terms:
          - target:
              column: tenant_id
            collation: ~
            operator_class: pg_catalog.int8_ops
            order: ascending
            nulls_order: last
          - target:
              expression: lower(title)
            collation: "pg_catalog.\"C\""
            operator_class: pg_catalog.text_ops
            order: descending
            nulls_order: first
        predicate: published
        definition: "CREATE UNIQUE INDEX documents_lookup_idx ON search.documents USING btree (tenant_id, lower(title) DESC) INCLUDE (body) NULLS NOT DISTINCT WHERE published"
        backend:
          backend: postgres
          method: btree
          predicate: published
          included_columns:
            - body
          nulls_not_distinct: true
          valid: true
          ready: true
          clustered: false
          replica_identity: false
      - name: documents_replica_idx
        unique: true
        terms:
          - target:
              column: id
            collation: ~
            operator_class: pg_catalog.int8_ops
            order: ascending
            nulls_order: last
        predicate: ~
        definition: CREATE UNIQUE INDEX documents_replica_idx ON search.documents USING btree (id)
        backend:
          backend: postgres
          method: btree
          predicate: ~
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: true
      - name: documents_title_unique
        unique: true
        terms:
          - target:
              column: tenant_id
            collation: ~
            operator_class: pg_catalog.int8_ops
            order: ascending
            nulls_order: last
          - target:
              column: title
            collation: "pg_catalog.\"C\""
            operator_class: pg_catalog.text_ops
            order: ascending
            nulls_order: last
        predicate: ~
        definition: "CREATE UNIQUE INDEX documents_title_unique ON search.documents USING btree (tenant_id, title) NULLS NOT DISTINCT"
        backend:
          backend: postgres
          method: btree
          predicate: ~
          included_columns: []
          nulls_not_distinct: true
          valid: true
          ready: true
          clustered: false
          replica_identity: false
    backend:
      backend: postgres
      table_kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
views: []
triggers: []
functions: []
